.provarCaches/00D5f000005vwGkEAI/objects/rstk__supitem__c.object
<CustomObject>
    <fields>
        <fullName>rstk__supitem_status__c</fullName>
        <inlineHelpText>Status begins as New when added. As it moves through process, it can be set to Submitted for Approval, Rejected or Accepted. When at status Submitted for Approval, record status cannot be changed within UI. A change request is submitted for approval.</inlineHelpText>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_stortempmaxc__c</fullName>
        <inlineHelpText>The maximum temperature to be allowed during storage, expressed in Celsius.</inlineHelpText>
        <label>Storage Temp Max º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_stortempmaxf__c</fullName>
        <inlineHelpText>The maximum temperature to be allowed during storage, expressed in Fahrenheit.</inlineHelpText>
        <label>Storage Temp Max º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_stortempminc__c</fullName>
        <inlineHelpText>The minimum temperature to be allowed during storage, expressed in Celsius.</inlineHelpText>
        <label>Storage Temp Min º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_stortempminf__c</fullName>
        <inlineHelpText>The minimum temperature to be allowed during storage, expressed in Fahrenheit.</inlineHelpText>
        <label>Storage Temp Min º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_subriskclass__c</fullName>
        <inlineHelpText>The Sub Risk Class for this UN Number. If entered on UN Number table record, will default to that value,  but it can be overridden.</inlineHelpText>
        <label>Z_OBSOLETE_Sub_Risk_Class</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_subriskclasst__c</fullName>
        <inlineHelpText>The Sub Risk Class for this UN Number. If entered on UN Number table record, will default to that value,  but it can be overridden.</inlineHelpText>
        <label>Sub Risk Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_targetdoiww__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Week of Recovery DOI</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_techname1__c</fullName>
        <label>Technical Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_techname2__c</fullName>
        <label>Technical Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempcheck__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; when temperature checking is required. When set to &apos;Yes&apos;, the Temperature tab fields are enabled for further information to be added pertaining to this item.</inlineHelpText>
        <label>Is Temperature Control Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempconthours__c</fullName>
        <inlineHelpText>The time temperature is controlled, expressed in hours.</inlineHelpText>
        <label>Temp Controlled Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempemailreqd__c</fullName>
        <inlineHelpText>Yes or No.  Is an email required when the temperature reading has been downloaded?  If Yes, at least one valid email address must be entered below.</inlineHelpText>
        <label>Temperature download Email Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempemails1__c</fullName>
        <inlineHelpText>The email that temperature downloads are to be sent - #1.</inlineHelpText>
        <label>Temp Downloads Distribution Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempemails2__c</fullName>
        <inlineHelpText>The email that temperature downloads are to be sent - #2.</inlineHelpText>
        <label>Temp Downloads Distribution Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempemails3__c</fullName>
        <inlineHelpText>The email that temperature downloads are to be sent - #3.</inlineHelpText>
        <label>Temp Downloads Distribution Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempreadonarrival__c</fullName>
        <inlineHelpText>Yes or No.  Must temperature be read upon receipt?</inlineHelpText>
        <label>Temperature Reading on Arrival</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_tempsoftware__c</fullName>
        <inlineHelpText>Enter the name of software required.</inlineHelpText>
        <label>What Software is Required</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_timetempmaxc__c</fullName>
        <inlineHelpText>The time temperature maximum, expressed in Celsius.</inlineHelpText>
        <label>Time Temp Max º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_timetempmaxf__c</fullName>
        <inlineHelpText>The time temperature maximum, expressed in Fahrenheit.</inlineHelpText>
        <label>Time Temp Max º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_timetempminc__c</fullName>
        <inlineHelpText>The time temperature minimum, expressed Celsius.</inlineHelpText>
        <label>Time Temp Min º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_timetempminf__c</fullName>
        <inlineHelpText>The time temperature minimum, expressed in Fahrenheit.</inlineHelpText>
        <label>Time Temp Min º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_typeofpckg__c</fullName>
        <label>Type of Packaging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>Poly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_unno__c</fullName>
        <inlineHelpText>The UN Number defining the Hazard Class. If Proper Shipping Name, Hazard Class, Sub Risk Class and Packing Group has already be established for this UN Number, values will default but can be overridden.</inlineHelpText>
        <label>UN No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_unpkgcode__c</fullName>
        <label>UN Packaging Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_uom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Unit of Measure for this WMS item.</inlineHelpText>
        <label>UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_venditem__c</fullName>
        <inlineHelpText>The Supplier&apos;s part number for this WMS Item from this supplier.</inlineHelpText>
        <label>Vendor Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_ventedcap__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; if cap is vented, otherwise set to &apos;No&apos;.</inlineHelpText>
        <label>Vented Cap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supplier Part Master</label>
    <listViews>
        <fullName>rstk__RS_Supplier_Part_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__supitem_div__c</columns>
        <columns>rstk__supitem_item__c</columns>
        <columns>rstk__supitem_desc__c</columns>
        <columns>rstk__supitem_status__c</columns>
        <columns>rstk__supitem_numsdsuploads__c</columns>
        <columns>rstk__supitem_recorderaddress__c</columns>
        <columns>rstk__supitem_uom__c</columns>
        <columns>rstk__supitem_unno__c</columns>
        <columns>rstk__supitem_povend__c</columns>
        <columns>rstk__supitem_facility__c</columns>
        <columns>rstk__supitem_venditem__c</columns>
        <columns>rstk__UN_No_Display__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Supplier Part Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Supplier_Part_Master_BOC</fullName>
        <columns>NAME</columns>
        <columns>rstk__supitem_div__c</columns>
        <columns>rstk__supitem_item__c</columns>
        <columns>rstk__supitem_desc__c</columns>
        <columns>rstk__supitem_status__c</columns>
        <columns>rstk__supitem_numsdsuploads__c</columns>
        <columns>rstk__supitem_recorderaddress__c</columns>
        <columns>rstk__supitem_uom__c</columns>
        <columns>rstk__supitem_unno__c</columns>
        <columns>rstk__supitem_povend__c</columns>
        <columns>rstk__supitem_facility__c</columns>
        <columns>rstk__supitem_venditem__c</columns>
        <columns>rstk__UN_No_Display__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__supitem_div__c</field>
            <operation>contains</operation>
            <value>BOC</value>
        </filters>
        <filters>
            <field>rstk__supitem_status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Supplier Part Master - BOC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Supplier_Part_Master_TMM</fullName>
        <columns>NAME</columns>
        <columns>rstk__supitem_div__c</columns>
        <columns>rstk__supitem_item__c</columns>
        <columns>rstk__supitem_desc__c</columns>
        <columns>rstk__supitem_status__c</columns>
        <columns>rstk__supitem_numsdsuploads__c</columns>
        <columns>rstk__supitem_recorderaddress__c</columns>
        <columns>rstk__supitem_uom__c</columns>
        <columns>rstk__supitem_unno__c</columns>
        <columns>rstk__supitem_povend__c</columns>
        <columns>rstk__supitem_facility__c</columns>
        <columns>rstk__supitem_venditem__c</columns>
        <columns>rstk__UN_No_Display__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__supitem_div__c</field>
            <operation>contains</operation>
            <value>TMM</value>
        </filters>
        <filters>
            <field>rstk__supitem_status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Supplier Part Master - TMM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Supplier_Part_Master_TMM1</fullName>
        <columns>NAME</columns>
        <columns>rstk__supitem_div__c</columns>
        <columns>rstk__supitem_item__c</columns>
        <columns>rstk__supitem_desc__c</columns>
        <columns>rstk__supitem_povend__c</columns>
        <columns>rstk__supitem_status__c</columns>
        <columns>rstk__supitem_numsdsuploads__c</columns>
        <columns>rstk__supitem_recorderaddress__c</columns>
        <columns>rstk__supitem_uom__c</columns>
        <columns>rstk__supitem_unno__c</columns>
        <columns>rstk__supitem_facility__c</columns>
        <columns>rstk__supitem_venditem__c</columns>
        <columns>rstk__UN_No_Display__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__supitem_div__c</field>
            <operation>contains</operation>
            <value>TMM1</value>
        </filters>
        <filters>
            <field>rstk__supitem_status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Supplier Part Master - TMM1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Supplier_Part_Master_TMM1_List</fullName>
        <columns>rstk__supitem_item__c</columns>
        <columns>rstk__supitem_desc__c</columns>
        <columns>rstk__supitem_povend__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__supitem_div__c</field>
            <operation>contains</operation>
            <value>TMM1</value>
        </filters>
        <filters>
            <field>rstk__supitem_status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Supplier Part Master - TMM1 List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Part Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Action_Reqd_Once_Recorder_is_Downloaded</fullName>
        <active>false</active>
        <description>Action Reqd Once Recorder is Downloaded field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_recorderactionreqd__c) )</errorConditionFormula>
        <errorMessage>Action Reqd Once Recorder is Downloaded field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Barcode_Text_for_Item</fullName>
        <active>true</active>
        <description>Barcode Text for Item Field is Required</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_barcodetext__c)</errorConditionFormula>
        <errorMessage>Barcode Text for Item Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Batch_Lot_Number</fullName>
        <active>false</active>
        <description>Batch/Lot Number field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_lotcontrolled__c) )</errorConditionFormula>
        <errorMessage>Batch/Lot Number field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Batch_Quality_Hold_on_Arrival</fullName>
        <active>false</active>
        <description>Batch Quality Hold on Arrival Field is Required</description>
        <errorConditionFormula>ISBLANK(TEXT(rstk__supitem_batchqtyhold__c))</errorConditionFormula>
        <errorMessage>Batch Quality Hold on Arrival Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Carrier_for_Return_of_Temp_Recorders</fullName>
        <active>true</active>
        <description>Carrier for Return of Temp Recorders is Required if Return of Temperature Recorder field is set.</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_recordercarrier__c)&amp;&amp; ISPICKVAL(rstk__supitem_returnrecorder__c, &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Carrier for Return of Temp Recorders is Required if Return of Temperature Recorder field is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Carrier_for_Returns</fullName>
        <active>false</active>
        <description>Carrier for Returns is Required if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_retcarrier__c)&amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_retcarrier__c) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Carrier for Returns is Required if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contact_Name</fullName>
        <active>false</active>
        <description>Contact Name is Required if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_contact__c )&amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_contact__c) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__supitem_recorderactionreqd__c</errorDisplayField>
        <errorMessage>Contact Name is Required if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contact_Phone_Number</fullName>
        <active>false</active>
        <description>Contact Phone Number  is Required if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_contactphone__c)&amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_contactphone__c) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__supitem_recorderactionreqd__c</errorDisplayField>
        <errorMessage>Contact Phone Number  is Required if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Country_of_Origin</fullName>
        <active>true</active>
        <description>Country of Origin is Required</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_countryorigin__c)</errorConditionFormula>
        <errorMessage>Country of Origin is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Customer_Return_Address</fullName>
        <active>true</active>
        <description>Customer Return Address is Required if Return of Temperature Recorder field is set.</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_recorderaddress__c ) &amp;&amp; ISPICKVAL(rstk__supitem_returnrecorder__c, &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Customer Return Address is Required if Return of Temperature Recorder field is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Description</fullName>
        <active>true</active>
        <description>Description is Required</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_desc__c)</errorConditionFormula>
        <errorMessage>Description is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Deviate_From_Standard_Min_Max</fullName>
        <active>false</active>
        <description>Deviate From Standard Min/Max field  is Required if Temperature Checking is set else not Required.</description>
        <errorConditionFormula>(ISPICKVAL(rstk__supitem_oktodeviate__c, &apos;&apos;) &amp;&amp; (ISPICKVAL(rstk__supitem_tempcheck__c, &apos;Yes&apos;))) ||(!ISPICKVAL(rstk__supitem_oktodeviate__c, &apos;&apos;) &amp;&amp; (ISPICKVAL(rstk__supitem_tempcheck__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_tempcheck__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Deviate From Standard Min/Max field  is Required if Temperature Checking is set else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Dip_Tube_Fields</fullName>
        <active>true</active>
        <description>At least one of the Dip Tube Tab fields must be specified, if Dip Tube Exchange Required is &apos;Yes&apos;.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(rstk__supitem_diptubeexchreqd__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(rstk__supitem_diptubepartno__c) &amp;&amp;
ISBLANK(rstk__supitem_etadiptubechkr__c) &amp;&amp;
ISBLANK(rstk__supitem_chemicalcode__c) &amp;&amp;
ISBLANK(rstk__supitem_etatorqadapter__c) &amp;&amp;
ISBLANK(rstk__supitem_diptubetorque__c) &amp;&amp;
ISBLANK(rstk__supitem_diptubecaptorqsetting__c) &amp;&amp;
ISBLANK(rstk__supitem_oringreplfreq__c)</errorConditionFormula>
        <errorMessage>At least one of the Dip Tube Tab fields must be specified, if Dip Tube Exchange Required is &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Dip_Tube_Torque</fullName>
        <active>true</active>
        <description>Dip Tube Torque Setting is Required when UOM is ‘DRUM’ or ‘TOTE’</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_diptubetorque__c) &amp;&amp; ( rstk__supitem_uom__r.rstk__syuom_uom__c = &apos;TOTE&apos; || rstk__supitem_uom__r.rstk__syuom_uom__c = &apos;DRUM&apos; 
)</errorConditionFormula>
        <errorMessage>Dip Tube Torque Setting is Required when UOM is ‘DRUM’ or ‘TOTE’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Does_This_Replace_an_Existing_Part</fullName>
        <active>true</active>
        <description>Does This Replace an Existing Part field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_replacement__c) )</errorConditionFormula>
        <errorMessage>Does This Replace an Existing Part field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__EAR99_ECCN</fullName>
        <active>true</active>
        <description>EAR99  ECCN field is Required</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_ear99__c)</errorConditionFormula>
        <errorMessage>EAR99  ECCN field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Empty_Receptacle</fullName>
        <active>true</active>
        <description>Empty Receptacle Value is Required and must be greater than 0 (zero) if item is Returnable Receptacle .</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_emptyrecptval__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_emptyrecptval__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;) &amp;&amp; rstk__supitem_emptyrecptval__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Empty Receptacle Value is Required and must be greater than 0 (zero) if item is Returnable Receptacle .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Expected_of_Residual_in_Empty_Receptcl</fullName>
        <active>false</active>
        <description>Expected % of Residual in Empty Receptcl field is Required and must be greater or equal to 0 (zero) if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_residualpct__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_residualpct__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;) &amp;&amp; rstk__supitem_residualpct__c &lt; 0)|| (!ISBLANK(rstk__supitem_residualpct__c) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Expected % of Residual in Empty Receptcl field is Required and must be greater or equal to 0 (zero) if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Export_Documents_and_Labeling</fullName>
        <active>false</active>
        <description>Export Documents and Labeling field  is Required if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISPICKVAL(rstk__supitem_expdocalbreqd__c, &apos;&apos;)&amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISPICKVAL(rstk__supitem_expdocalbreqd__c, &apos;&apos;) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Export Documents and Labeling field  is Required if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Freight_Account_for_Temp_Recorders</fullName>
        <active>true</active>
        <description>Freight Account for Temp Recorders is Required if Return of Temperature Recorder field is set.</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_recorderfrghtacct__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnrecorder__c, &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Freight Account for Temp Recorders is Required if Return of Temperature Recorder field is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Frequency_of_Returns</fullName>
        <active>false</active>
        <description>Frequency of Returns is Required if Return of Temperature Recorder field is set.</description>
        <errorConditionFormula>ISPICKVAL(rstk__supitem_recorderretfreq__c, &apos;&apos;) &amp;&amp; ISPICKVAL(rstk__supitem_returnrecorder__c, &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Frequency of Returns is Required if Return of Temperature Recorder field is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Frequency_of_Returns_Quantity</fullName>
        <active>false</active>
        <description>Frequency of Returns - Quantity is Required if Return of Temperature Recorder Required field is set</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_recorderretfreqqty__c) &amp;&amp; ISPICKVAL(rstk__supitem_recorderretfreq__c, &apos;Quantity&apos;)) || (!ISBLANK(rstk__supitem_recorderretfreqqty__c) &amp;&amp; ISPICKVAL(rstk__supitem_recorderretfreq__c, &apos;Quantity&apos;) &amp;&amp; rstk__supitem_recorderretfreqqty__c &lt; 1 )</errorConditionFormula>
        <errorMessage>Frequency of Returns - Quantity is Required if Return of Temperature Recorder Required field is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Get_Packaging_Serial_Numbers</fullName>
        <active>false</active>
        <description>Get Packaging Serial Numbers field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_getpckgserials__c) )</errorConditionFormula>
        <errorMessage>Get Packaging Serial Numbers field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Gross_Weight</fullName>
        <active>true</active>
        <description>Gross Weight is Required and must be greater than 0 (zero)</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_grossweight__c) || rstk__supitem_grossweight__c &lt;= 0</errorConditionFormula>
        <errorMessage>Gross Weight is Required and must be greater than 0 (zero)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Gross_Wt_of_Return_Including_Resid</fullName>
        <active>false</active>
        <description>Gross Wt of Return Including Resid is Required and must be greater than 0 (zero) if item is Returnable Receptacle else not Required.</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_returngrosswt__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;)) ||(!ISBLANK(rstk__supitem_returngrosswt__c) &amp;&amp; ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;Yes&apos;) &amp;&amp; rstk__supitem_emptyrecptval__c &lt;= 0)|| (!ISBLANK(rstk__supitem_returngrosswt__c) &amp;&amp; (ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;No&apos;)||ISPICKVAL(rstk__supitem_returnreceptacle__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Gross Wt of Return Including Resid is Required and must be greater than 0 (zero) if item is Returnable Receptacle else not Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Hazard_Class</fullName>
        <active>true</active>
        <description>Hazard Class is Required if item is Hazardous .</description>
        <errorConditionFormula>(ISBLANK(rstk__supitem_hazclass__c) &amp;&amp; ISPICKVAL(rstk__supitem_hazardous__c, &apos;Yes&apos;))</errorConditionFormula>
        <errorMessage>Hazard Class is Required if item is Hazardous .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Hazardous</fullName>
        <active>true</active>
        <description>Hazardous Field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_hazardous__c) )</errorConditionFormula>
        <errorMessage>Hazardous Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Is_Temperature_Checking_Required</fullName>
        <active>true</active>
        <description>Is Temperature Checking Required field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_tempcheck__c) )</errorConditionFormula>
        <errorMessage>Is Temperature Checking Required field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Status1</fullName>
        <active>true</active>
        <description>Item Status should be NEW for new records</description>
        <errorConditionFormula>ISNEW()&amp;&amp; !ISPICKVAL(rstk__supitem_status__c, &apos;New&apos;)</errorConditionFormula>
        <errorMessage>Item Status should be NEW for new records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Status2</fullName>
        <active>true</active>
        <description>If Item is already Accepted then Item Status is not Modifiable.</description>
        <errorConditionFormula>!ISNEW()&amp;&amp; ISCHANGED(rstk__supitem_status__c) &amp;&amp;  PRIORVALUE(rstk__supitem_status__c) = &apos;Accepted&apos;</errorConditionFormula>
        <errorMessage>If Item is already Accepted then Item Status is not Modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Status3</fullName>
        <active>true</active>
        <description>Item Status can only set to Submitted for Approval.</description>
        <errorConditionFormula>!ISNEW()&amp;&amp; ISCHANGED(rstk__supitem_status__c) &amp;&amp; (PRIORVALUE(rstk__supitem_status__c)=&apos;New&apos; || PRIORVALUE(rstk__supitem_status__c)=&apos;Rejected&apos;) &amp;&amp; !ISPICKVAL(rstk__supitem_status__c, &apos;Submitted for Approval&apos;)</errorConditionFormula>
        <errorMessage>Item Status can only set to Submitted for Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__License_Required</fullName>
        <active>true</active>
        <description>License Required field is Required</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_licensereqd__c) )</errorConditionFormula>
        <errorMessage>License Required field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__MQCS_Required</fullName>
        <active>true</active>
        <description>MQCS Required field value is required.</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__supitem_mqcs__c) )</errorConditionFormula>
        <errorMessage>MQCS Required field value is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Manufacturing_Location_of_Receptacle</fullName>
        <active>false</active>
        <description>Manufacturing Location of Receptacle field is Required</description>
        <errorConditionFormula>ISBLANK(rstk__supitem_recptmfgloc__c)</errorConditionFormula>
        <errorMessage>Manufacturing Location of Receptacle field is Required</errorMessage>
    </validationRules>
</CustomObject>